toute les pages

--- a/page_site.html
+++ b/page_site.html
@@ -17,7 +17,7 @@
         <ul class="nav-links">
           <li><a href="page_site.html">home</a></li>
           <li><a href="test2.html">cv</a></li>
-          <li><a href="display">houses</a></li>
+          <li><a href="maison.html">houses</a></li>
         </ul>
       </nav>
     </header>
@@ -91,7 +91,7 @@
       </section>
     </main>
     <footer>
-      <h2>tout droit reservé</h2>
+      <h2>tout droit reservé Ismael EL GHERBI</h2>
     </footer>
   </body>
 </html>
