--- a/test2.html
+++ b/test2.html
@@ -16,88 +16,89 @@
     </header>
     <main>
       <div class="cv">
-      <div class="barre-gauche">
-        <div class="nom-photo">
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkMAXNZ1S0F7o4ukRGWfiwEHd0ndRo8KwNXdk0h1NJ3Q&s"
-            alt="harry potter"
-          />
-          <h1>Harry potter</h1>
-          <p>wizard</p>
+        <div class="barre-gauche">
+          <div class="nom-photo">
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkMAXNZ1S0F7o4ukRGWfiwEHd0ndRo8KwNXdk0h1NJ3Q&s"
+              alt="harry potter"
+            />
+            <h1>Harry potter</h1>
+            <p>wizard</p>
+          </div>
+
+          <section class="contact">
+            <h2>Contact</h2>
+            <div class="info">
+              <p>harryp@gmail.com</p>
+              <p>06 9 3/4</p>
+              <p>Poudlard</p>
+            </div>
+          </section>
+
+          <section class="Formation">
+            <h2>Formation</h2>
+            <div class="info">
+              <p>7eme année a Poudlard</p>
+              <p>griffondor</p>
+            </div>
+          </section>
+
+          <section class="skills">
+            <h2>skill</h2>
+            <div class="info">
+              <p>potion</p>
+              <p>spell</p>
+              <p>Tongue twister</p>
+            </div>
+          </section>
         </div>
 
-        <section class="contact">
-          <h2>Contact</h2>
-          <div class="info">
-            <p>harryp@gmail.com</p>
-            <p>06 9 3/4</p>
-            <p>Poudlard</p>
-          </div>
-        </section>
+        <div class="droit">
+          <section class="experience">
+            <div class="lorem">
+              <h2 class="exp">Expérience professionnelle</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
+                facere aliquam ullam est, repellendus ex magni officiis alias
+                fugiat corrupti quae ratione blanditiis doloremque consequuntur
+                beatae exercitationem saepe itaque eos?
+              </p>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Nostrum ab quo maxime dolorum tempore accusamus quibusdam
+                reprehenderit doloremque laudantium alias. Inventore quas
+                veritatis quam nesciunt temporibus iure dignissimos repellendus
+                commodi?
+              </p>
+            </div>
+          </section>
 
-        <section class="Formation">
-          <h2>Formation</h2>
-          <div class="info">
-            <p>7eme année a Poudlard</p>
-            <p>griffondor</p>
-          </div>
-        </section>
-
-        <section class="skills">
-          <h2>skill</h2>
-          <div class="info">
-            <p>potion</p>
-            <p>spell</p>
-            <p>Tongue twister</p>
-          </div>
-        </section>
-      </div>
-
-      <div class="droit">
-        <section class="experience">
-          <div class="lorem">
-            <h2 class="exp">Expérience professionnelle</h2>
+          <div class="text2">
+            <h2 class="passion">passion</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
-              facere aliquam ullam est, repellendus ex magni officiis alias
-              fugiat corrupti quae ratione blanditiis doloremque consequuntur
-              beatae exercitationem saepe itaque eos?
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste
+              nobis ducimus voluptatum quod necessitatibus, quisquam at,
+              perferendis, alias error ex sequi cum culpa est laudantium dolores
+              aliquam laborum possimus. Ipsa?
             </p>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum
-              ab quo maxime dolorum tempore accusamus quibusdam reprehenderit
-              doloremque laudantium alias. Inventore quas veritatis quam
-              nesciunt temporibus iure dignissimos repellendus commodi?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+              labore tempora, vero cumque aliquam eligendi cupiditate odio,
+              optio ullam sed saepe temporibus voluptatem illum quia corporis
+              iure corrupti odit. Illum!
             </p>
           </div>
-        </section>
-
-        <div class="text2">
-          <h2 class="passion">passion</h2>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste nobis
-            ducimus voluptatum quod necessitatibus, quisquam at, perferendis,
-            alias error ex sequi cum culpa est laudantium dolores aliquam
-            laborum possimus. Ipsa?
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-            labore tempora, vero cumque aliquam eligendi cupiditate odio, optio
-            ullam sed saepe temporibus voluptatem illum quia corporis iure
-            corrupti odit. Illum!
-          </p>
-        </div>
-        <div class="text3">
-          <h2 class="text3">about-me</h2>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores,
-            tenetur vel consequatur eius ad minus magnam illum quis ut sint,
-            doloremque perferendis aut, expedita architecto asperiores quo
-            facere repellat facilis.
-          </p>
+          <div class="text3">
+            <h2 class="text3">about-me</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores,
+              tenetur vel consequatur eius ad minus magnam illum quis ut sint,
+              doloremque perferendis aut, expedita architecto asperiores quo
+              facere repellat facilis.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
     </main>
     <footer></footer>
   </body>
