--- a/cv/cv.html
+++ b/cv/cv.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="test2.css" />
+    <link rel="stylesheet" href="cv.css" />
     <title>Mon CV</title>
   </head>
   <body>
     <header>
       <nav class="navbar">
         <ul class="nav-links">
-          <li><a href="page_site.html">home</a></li>
+          <li><a href="/main/page_site.html">home</a></li>
         </ul>
       </nav>
     </header>
