--- a/house/maison.html
+++ b/house/maison.html
@@ -10,7 +10,7 @@
     <header>
       <nav class="navbar">
         <ul class="nav-links">
-          <li><a href="page_site.html">home</a></li>
+          <li><a href="/main/page_site.html">home</a></li>
         </ul>
       </nav>
     </header>
@@ -138,6 +138,8 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <h2>tout droits reservé Ismael EL GHERBI</h2>
+    </footer>
   </body>
 </html>
