--- a/main/page_site.html
+++ b/main/page_site.html
@@ -16,8 +16,8 @@
       <nav class="navbar">
         <ul class="nav-links">
           <li><a href="page_site.html">home</a></li>
-          <li><a href="test2.html">cv</a></li>
-          <li><a href="maison.html">houses</a></li>
+          <li><a href="/cv/cv.html">cv</a></li>
+          <li><a href="/house/maison.html">houses</a></li>
         </ul>
       </nav>
     </header>
@@ -49,7 +49,7 @@
 
       <section>
         <div class="HistoireProfs">
-          <h1>il y a de nombreux profs</h1>
+          <h1>de nombreux profs</h1>
           <div class="Dumbledore">
             <p>
               Albus Dumbledore : puissant sorcier, directeur de Poudlard,
