--- a/main/page_site.html
+++ b/main/page_site.html
@@ -18,6 +18,10 @@
           <li><a href="page_site.html">home</a></li>
           <li><a href="/cv/cv.html">cv</a></li>
           <li><a href="/house/maison.html">houses</a></li>
+          <li><a href="/slides/index.html">slides</a></li>
+          <li><a href="/menu_burger/burger.html">burger</a></li>
+          <li><a href="/Formulaires/index.html">Formulaires</a></li>
+          <li><a href="/choix_maisons/index.html">choix</a></li>
         </ul>
       </nav>
     </header>
